# anivision

./: .gitignore  SETUP.md
.claude/: settings.json
.sisyphus/run-continuation/: ses_150abd2bfffeKnLvgOXFQ9nU7h.json  ses_155055ca1ffeChmwdDY2oI7rxN.json  ses_15518746affeqxAhBUIgxNQWzU.json  ses_1558dbc20ffeKG7I2BRHW24N51.json
ai_engine/: pyproject.toml  requirements.txt
ai_engine/gan/: dcgan.py  generate.py  generator.py  train.py
ai_engine/models/: class_names.json  dataset.csv  label_map.json
ai_engine/recognition/: convnext_model.py  model.py  predictor.py  preprocess.py  train.py  train_caformer.py
ai_engine/scripts/: __init__.py  clean_data.py  compare.py  download_datasets.py  generate_dataset_csv.py  map_labels.py  split_dataset.py
backend/: alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260615_1418_8d8317692ffe_initial.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: auth_middleware.py  behavior_middleware.py
backend/app/routers/: __init__.py  analytics.py  auth.py  characters.py  follows.py  likes.py  posts.py  search.py  (+2 more)
backend/tests/: conftest.py
docs/: 230901379-人工智能系统课程设计-指导书.doc  archive_notice.md  detailed_design.md  development_plan.md  grading.md  requirements_analysis.md  tech_selection.md  《人工智能系统课程设计》成绩评定标准.docx  课程设计材料归档和答辩须知.docx  项目编号-基于xx算法的xx智能系统-课程设计任务书（案例模板）.doc  项目编号-基于xx算法的xx智能系统-课程设计说明书（案例模板）.doc
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
(+70 files in other folders)
